yamls/apertium/deployment_apertium-release-name.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: apertium
    chart: apertium-0.1.1
    heritage: Helm
    release: RELEASE-NAME
  name: apertium-RELEASE-NAME
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apertium
      release: RELEASE-NAME
  template:
    metadata:
      annotations:
        prometheus.io/port: "9102"
      labels:
        app: apertium
        release: RELEASE-NAME
        routed_via: RELEASE-NAME
    spec:
      containers:
      - env:
        - name: SERVICE_IDENTIFIER
          value: apertium-RELEASE-NAME
        image: docker-registry.wikimedia.org/wikimedia/mediawiki-services-apertium:latest
        imagePullPolicy: IfNotPresent
        livenessProbe:
          tcpSocket:
            port: 2737
        name: apertium-RELEASE-NAME
        ports:
        - containerPort: 2737
        readinessProbe:
          httpGet:
            path: /stats
            port: 2737
        resources:
          limits:
            cpu: 1100m
            memory: 800Mi
          requests:
            cpu: 100m
            memory: 200Mi
