yamls/apertium/service_apertium-release-name.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: apertium
    chart: apertium-0.1.1
    heritage: Helm
    release: RELEASE-NAME
  name: apertium-RELEASE-NAME
spec:
  ports:
  - name: http
    port: 2737
    protocol: TCP
  selector:
    app: apertium
    release: RELEASE-NAME
    routed_via: RELEASE-NAME
  type: NodePort
